add new recipe, sweet alert, styles

--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn-success">Agregar receta</button>
+    <button class="btn btn-success" (click)="showFormRecipe()">Agregar receta</button>
   </div>
 </div>
 <hr />
