--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,4 @@
-<a
+<!-- <a
   style="cursor: pointer;"
   [routerLink]="[index]"
   routerLinkActive="active"
@@ -8,10 +8,34 @@
     <p class="list-group-item-text">{{ recipe.description }}</p>
   </div>
   <span class="pull-right">
+      <img
+        [src]="recipe.imagePath"
+        alt="{{ recipe.name }}"
+        class="img-responsive"
+        style="max-height: 50px;">
+    </span>
+</a> -->
+
+<a 
+  style="cursor: pointer;"
+  [routerLink]="[index]"
+  routerLinkActive="active"
+  class="list-group-item clearfix">
+  <div class="card mb-3" style="max-width: 540px;">
+    <div class="row g-0">
+      <div class="col-md-4">
         <img
           [src]="recipe.imagePath"
           alt="{{ recipe.name }}"
-          class="img-responsive"
-          style="max-height: 50px;">
-      </span>
+          class="img-fluid rounded-start">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">{{recipe.name}}</h5>
+          <p class="card-text">{{recipe.description}}</p>
+          <p class="card-text"><small class="text-muted">Last updated {{recipe.name.length}} days ago</small></p>
+        </div>
+      </div>
+    </div>
+  </div>
 </a>
