--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,15 +1,18 @@
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-xs-12 btn-group">
     <button class="btn btn-success" (click)="showFormRecipe()">Agregar receta</button>
+    <button class="btn btn-secondary" (click)="showAllIngredients()">Listar ingredientes</button>
   </div>
 </div>
 <hr />
 <div class="row">
   <div class="col-xs-12">
-    <app-recipe-item
-      *ngFor="let recipeEl of recipes; let i = index"
-      [recipe]="recipeEl"
-      [index]="i"
-    ></app-recipe-item>
+    <div class="overflow-auto h-75 d-inline-block">
+      <app-recipe-item
+        *ngFor="let recipeEl of recipes; let i = index"
+        [recipe]="recipeEl"
+        [index]="i"
+      ></app-recipe-item>
+    </div>
   </div>
 </div>
