recipe visual delete, some styles for header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<!-- <nav class="navbar navbar-default">
   <div class="container-fluid">
 
 
@@ -8,4 +8,21 @@
 
     </div>
   </div>
-</nav>
+</nav> -->
+<header class="py-3 mb-3 border-bottom">
+  <div class="container d-grid gap-2 align-items-center">
+    <div class="row" style="grid-template-columns: 1fr 1fr;">
+      <div class="col-md-6 col-sm-12 text-center">
+        <h2>
+          <a routerLink="/" class="btn navbar-brand">Libro de recetas</a>
+        </h2>
+      </div>
+      <div class="col-md-6 col-sm-12">
+        <!-- TODO: Not implemented -->
+        <form class="w-100 me-3" role="search">
+          <input type="search" class="form-control" placeholder="Buscar receta..." aria-label="Buscar">
+        </form>
+      </div>
+    </div>
+  </div>
+</header>
