--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -3,28 +3,45 @@
     <img
       [src]="recipe.imagePath"
       alt="{{ recipe.name }}"
-      class="img-responsive"
-      style="max-height: 300px;">
+      class="rounded mx-auto d-block mw-100"
+      style="height: 300px;"
+    >
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>{{ recipe.name }}</h1>
+    <h3 class="text-center py-3">{{ recipe.name }}</h3>
+    <hr/>
   </div>
 </div>
-<div class="row">
-  <div class="col-xs-12">
-    {{ recipe.description }}
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <p class="lead">
+        {{ recipe.description }}
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <h6>Ingredientes</h6>
+    <div class="col-xs-12">
+      <ul class="list-group">
+        <li
+          class="list-group-item"
+          *ngFor="let ingredient of recipe.ingredients">
+          {{ ingredient.name }} - {{ ingredient.amount }}
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
-<div class="row">
-  <div class="col-xs-12">
-    <ul class="list-group">
-      <li
-        class="list-group-item"
-        *ngFor="let ingredient of recipe.ingredients">
-        {{ ingredient.name }} - {{ ingredient.amount }}
-      </li>
-    </ul>
+<div class="container">
+  <div class="row">
+    <div class="col col-6 py-5">
+      <div class="btn-group" role="group" aria-label="Basic example">
+        <button type="button" class="btn btn-outline-danger" (click)="onDeleteRecipe()">Eliminar</button>
+        <button type="button" class="btn btn-outline-secondary">Editar</button>
+      </div>
+    </div>
   </div>
 </div>
