edit and delete recipes

--- a/src/app/recipes/recipe-add-form/recipe-add-form.component.html
+++ b/src/app/recipes/recipe-add-form/recipe-add-form.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="d-flex justify-content-center">
       <div class="col col-sm-12 col-md-8 mt-5">
-        <h2 class="text-center">Agregar Receta</h2>
+        <h2 class="text-center"> {{titlePage}} </h2>
         <form (ngSubmit)="onSubmit()" [formGroup]="addRecipeForm">
             
             <!-- Value: {{ addRecipeForm.value | json }}
