--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -40,7 +40,7 @@
     <div class="col col-6 py-5">
       <div class="btn-group" role="group" aria-label="Basic example">
         <button type="button" class="btn btn-outline-danger" (click)="onDeleteRecipe()">Eliminar</button>
-        <button type="button" class="btn btn-outline-secondary">Editar</button>
+        <button type="button" class="btn btn-outline-secondary" (click)="onEditRecipe()">Editar</button>
       </div>
     </div>
   </div>
