--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,7 +7,7 @@
 <hr />
 <div class="row">
   <div class="col-xs-12">
-    <div class="overflow-auto h-75 d-inline-block">
+    <div class="overflow-auto">
       <app-recipe-item
         *ngFor="let recipeEl of recipes; let i = index"
         [recipe]="recipeEl"
